# gtsam-ct-factors

./: .gitignore  CMakeLists.txt  DEVELOP.md  Dockerfile  INSTALL.md  README.md  docker-compose.yml  dockerup.sh  entrypoint.sh  make_example.sh  myst.yml  package.xml  pyproject.toml  quick_start_python.ipynb  refresh_x11.sh  start-vnc.sh  vcpkg.json
.devcontainer/: Dockerfile  devcontainer.json
.github/: README.md  copilot-instructions.md
.github/scripts/: python.sh  unix.sh
.github/workflows/: build-cibw.yml  build-linux.yml  build-macos.yml  build-python.yml  build-special.yml  build-windows.yml  (+4 more)
analyses/: CMakeLists.txt
analyses/LostInTheWoods/: LostInTheWoodsStudy.cpp  WoodsTiming.cpp  default_params.yaml  fig2_params.yaml  fig3_params.yaml  fig4_params.yaml  timing_params.yaml
analyses/python/: interp_plots.py  litw_fig1and2.py  litw_fig2.py  litw_fig3.py  litw_fig4.py  plot_simple_ex.py  plot_timing_results.py  plot_traj.py
analyses/simple_traj/: BubblingParams.yaml  InterpSpeedTest.cpp  SimpleInterpExample.cpp  SimpleInterpExampleDefault.yaml
analyses/wnoa_graph/: WNOAGraph.cpp  WNOAGraph.yaml
cmake/: FindGeographicLib.cmake  GtsamBuildTypes.cmake  GtsamMakeConfigFile.cmake  HandleBoost.cmake  HandleGeneralOptions.cmake  HandleGeographicLib.cmake  HandleGlobalBuildFlags.cmake  HandlePrintConfiguration.cmake
doc/: GTSAM-Concepts.md
examples/: ABC.h  AbcEquivariantFilterExample.cpp  CMakeLists.txt  CombinedImuFactorsExample.cpp  EquivariantFilter.h  GEKF_Rot3Example.cpp  GaussianProcessWnoaSE3Example.cpp  GiantGlassOfMilkExample.cpp  GiantGlassOfMilkExample.h  IEKF_NavstateExample.cpp  ImuFactorsExample.cpp  Interpolator.h  LeggedEstimatorReplayExample.cpp  LostInTheWoodsExample.cpp  LostInTheWoodsExample.h  LostInTheWoodsMarginalExample.cpp  LostInTheWoodsMarginalExample.h  LostInTheWoodsTestExp.cpp  Pose2SLAMExample.cpp  Pose3Localization_StarryNight.cpp  Pose3Localization_StarryNight.h  SFMExample_SmartFactor_bal.cpp  SimpleInterpExample.cpp  SimpleInterpExampleDefault.yaml  starryNight.m  starryNight_data_reprocess.m
gtsam/: CMakeLists.txt
gtsam_unstable/: CMakeLists.txt  gtsam_unstable.i
interp_analyses/: CMakeLists.txt
interp_analyses/LostInTheWoods/: LostInTheWoodsStudy.cpp
interp_analyses/simple_traj/: BubblingParams.yaml  SimpleInterpExample.cpp  SimpleInterpExampleDefault.yaml
matlab/: CMakeLists.txt  MatlabCustomFactor.h  README.md  custom.i
python/: CMakeLists.txt  requirements.txt
steam-regression/: CMakeLists.txt  LostInTheWoods.yaml  LostInTheWoodsSteam.cpp  LostInTheWoodsSteam.h  br2d_error_evaluator.h  test_br2d_error_eval.cpp
tests/: testBoundingConstraint.cpp  testDoglegOptimizer.cpp  testGaussianBayesTreeB.cpp  testGaussianISAM2.cpp  testGlobalPositioner.cpp  testGncOptimizer.cpp  testLie.cpp  testLocationRecovery.cpp  testMarginals.cpp  testNonlinearEquality.cpp  testNonlinearOptimizer.cpp  testProductLieGroup.cpp  testSubgraphPreconditioner.cpp
timing/: README.md  benchmark_range_factor_plaza2.py  exportBayesTreeCovarianceVisuals.cpp  plot_bayes_tree_covariance.py  timeActiveSetSolverComparison.cpp  timeBayesTreeCovariance.cpp  timeISAM2Covariance.cpp  timeMultifrontalSolver.cpp  timeRangeFactorPlaza2.cpp  timeSFMBAL.cpp  timeSFMBAL.h
(+733 files in other folders)
