[build-system]
requires = ["setuptools<65", "wheel", "pip>=21.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gtsam-ct-factors"
version = "0.0.1"
description = "dev project for gtsam continuous time factors"
readme = "README.md"
requires-python = "==3.10.*"

dependencies = [
    "numpy",
    "scipy",
    "PyQt5",
    "matplotlib",
    "pybind11",
    "networkx",
    "line_profiler",
    "seaborn",
    "pandas",
    "pip",
    "black",
    "flake8",
    "pytest",
    "pyvista>=0.46.2",
]

[tool.setuptools]
packages = ["python"]

[project.optional-dependencies]
dev = [
    "mypy",
    "isort",
    "autopep8"
]
